Revert "fix: remove build from compose"
This reverts commit 9abb9a57b7c5221dfb366fd90443a62a29e5e738.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -42,6 +42,9 @@ services:
   hal-9100:
     container_name: hal-9100
     image: ghcr.io/stellar-amenities/hal-9100/hal-9100:0.0.20
+    build:
+      context: ..
+      dockerfile: docker/Dockerfile
     ports:
       - 3000:3000
     depends_on:
