--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -57,6 +57,7 @@ services:
       - DATABASE_URL=postgres://postgres:secret@postgres/mydatabase
       - S3_ENDPOINT=http://minio:9000
       - REDIS_URL=redis://redis
+      - NO_PROXY=minio,postgres,redis,myendpoint.openai.azure.com
     command: ["--config", "/app/hal-9100.toml", "--port", "3000"]
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
