--- a/hal-9100.toml
+++ b/hal-9100.toml
@@ -13,11 +13,11 @@ model_url = "http://ollama:11434/v1/chat/completions"
 # model_url = "http://localhost:8000/chat/completions"
 
 # if your own llm needs an api key (authorization bearer token), for example with anyscale:
-model_api_key = "get it here https://app.endpoints.anyscale.com/credentials"
+# model_api_key = "get it here https://app.endpoints.anyscale.com/credentials"
 
 database_url = "postgres://postgres:secret@localhost:5432/mydatabase"
-redis_url = "redis://127.0.0.1/"
-s3_endpoint = "http://localhost:9000"
+redis_url = "redis://redis/"
+s3_endpoint = "http://minio:9000"
 s3_access_key = "minioadmin"
 s3_secret_key = "minioadmin"
 s3_bucket_name = "mybucket"
